# SimpleGame

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.h.in
resources/shaders/: quad.frag  quad.vert  text.frag  text.vert  tilemap.frag  tilemap.vert  voxel.frag  voxel.vert
src/: client.c  color.h  io.h  list.c  list.h  logger.h  player.c  player.h  protocol.h  renderer.c  renderer.h  server.c
src/engine/: camera.c  camera.h  color.h  engine.c  engine.h  entity.c  entity.h  input.c  input.h  io.c  io.h  list.c  list.h  logger.c  logger.h  settings.c  settings.h  textbuffer.c  textbuffer.h  tilemap.c  tilemap.h  util.c  util.h  util_colors.h
src/engine/graphics/: renderer.c  renderer.h  shader.c  shader.h
src/engine/math/: constants.h  rect.h  vector.c  vector.h
src/engine/network/: netclient.c  netclient.h
src/engine/ui/: button.c  button.h  progress_bar.c  progress_bar.h  switch.c  switch.h  textbox.c  textbox.h
src/graphics/: renderer.c  renderer.h  shader.c  shader.h
src/ui/: button.c  button.h
